force-app/main/default/objects/Request_Number__c/Request_Number__c.object-meta.xml
<CustomObject>
    <description>Stores campus service requests submitted by students.</description>
    <label>Service Request</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Service Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>