force-app/main/default/objects/Request_Number__c/fields/Assigned_Department__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Department__c</fullName>
    <description>Department responsible for handling the service request</description>
    <inlineHelpText>Department assigned to handle this request</inlineHelpText>
    <label>Assigned Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT Support</fullName>
            </value>
            <value>
                <fullName>Hostel</fullName>
            </value>
            <value>
                <fullName>Library</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Academic Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>