force-app/main/default/objects/Request_Number__c/fields/Assigned_Staff_New__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Staff_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Staff member assigned to handle the service request</description>
    <inlineHelpText>Select the staff member assigned to this request</inlineHelpText>
    <label>Assigned Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Request</relationshipName>
    <type>Lookup</type>
</CustomField>