force-app/main/default/objects/Request_Number__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category of the campus service request</description>
    <inlineHelpText>Select the type of service request</inlineHelpText>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT Support</fullName>
            </value>
            <value>
                <fullName>Hostel</fullName>
            </value>
            <value>
                <fullName>Library</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Academic Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>