force-app/main/default/objects/Request_Number__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of the student&apos;s issue</description>
    <inlineHelpText>Enter details about the service request</inlineHelpText>
    <label>Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>