force-app/main/default/objects/Request_Number__c/fields/Request_Age__c.field-meta.xml
<CustomField>
    <fullName>Request_Age__c</fullName>
    <description>Number of days taken to resolve the service request</description>
    <formula>IF(
    ISBLANK(Resolution_Date__c),
    TODAY() - DATEVALUE(CreatedDate),
    DATEVALUE(Resolution_Date__c) - DATEVALUE(CreatedDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the age of the service request in days</inlineHelpText>
    <label>Request Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>