force-app/main/default/objects/Request_Number__c/fields/Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Date__c</fullName>
    <description>Date and time when the service request was resolved</description>
    <label>Resolution Date</label>
    <type>DateTime</type>
</CustomField>