force-app/main/default/objects/Request_Number__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Student who submitted the service request</description>
    <inlineHelpText>Select the student who submitted this request</inlineHelpText>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Service Request</relationshipLabel>
    <relationshipName>Service_Request</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>