force-app/main/default/objects/Request_Number__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Short summary of the service request</description>
    <inlineHelpText>Enter a brief description of the issue</inlineHelpText>
    <label>Subject</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>