force-app/main/default/objects/Request_Number__c/validationRules/Required_Request_Information.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Request_Information</fullName>
    <active>true</active>
    <description>Ensures all required request information is provided before submission.</description>
    <errorConditionFormula>OR(
    ISBLANK(Subject__c),
    ISBLANK(Description__c),
    ISBLANK(Student__c),
    ISBLANK(TEXT(Category__c))
)</errorConditionFormula>
    <errorMessage>Subject, Description, Student, and Category are required before submitting a request.</errorMessage>
</ValidationRule>