force-app/main/default/objects/Request_Number__c/validationRules/Resolution_Date_Cannot_Be_Before_Created.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_Date_Cannot_Be_Before_Created</fullName>
    <active>true</active>
    <description>Prevents the Resolution Date from being earlier than the Created Date.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Resolution_Date__c)),
    Resolution_Date__c &lt; CreatedDate
)</errorConditionFormula>
    <errorDisplayField>Resolution_Date__c</errorDisplayField>
    <errorMessage>Resolution Date cannot be earlier than Created Date.</errorMessage>
</ValidationRule>