force-app/main/default/objects/Request_Number__c/validationRules/Resolved_Requires_Resolution_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolved_Requires_Resolution_Date</fullName>
    <active>true</active>
    <description>Requires a Resolution Date when a service request is marked Resolved.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Resolved&quot;),
    ISBLANK(Resolution_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Resolution_Date__c</errorDisplayField>
    <errorMessage>A Resolution Date is required when the request is marked Resolved.</errorMessage>
</ValidationRule>